...
              Text(
                context.l10n.systemSelectionToolsDescription,
                style: Theme.of(context).textTheme.bodySmall,
              ),
              const SizedBox(height: 12),
              CompactSwitchListTile(
                key: const Key('settings-selection-enabled'),
                contentPadding: EdgeInsets.zero,
                title: Text(context.l10n.enableSystemSelectionTools),
                subtitle: Text(
                  context.l10n.enableSystemSelectionToolsDescription,
                ),
                value: configuration.enabled,
...
