...
    "description": "DingDong built-in interface copy."
  },
  "localServiceUnavailable": "Local service unavailable",
  "@localServiceUnavailable": {
    "description": "DingDong built-in interface copy."
  },
  "localServiceVerified": "Local service verified",
  "@localServiceVerified": {
    "description": "DingDong built-in interface copy."
  },
  "lowercaseHyphenName": "lowercase-hyphen-name",
  "@lowercaseHyphenName": {
    "description": "DingDong built-in interface copy."
...
